--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  # qt-avif-image-plugin-0.0.0-20210424.tar.gz: e06a928ca31a46e4253ae0f012e2ab82cf8adf98
-  qt-avif-image-plugin-0.4.2.tar.gz: cd8c6666674e5b4c362e439c29a632d40ddb3da9
+  qt-avif-image-plugin-0.0.0-20210424.tar.gz: e06a928ca31a46e4253ae0f012e2ab82cf8adf98
+  # qt-avif-image-plugin-0.4.2.tar.gz: cd8c6666674e5b4c362e439c29a632d40ddb3da9
