--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qt-avif-image-plugin-0.4.3-20210803.tar.gz: 41f924f51420ef08c7143ef4feaa509e9627658c
+  v0.4.8.tar.gz: e221d44e9229993a1b933495d9247a8f7c76ae14
