--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  v0.5.1.tar.gz: cbc5cfa0453721bd2e8118fb6d9f88cbfd655041
+  qt-avif-image-plugin-0.5.4.tar.gz: d1e30f5c20fafb021d1385b5a4f4a9fbeac3f68e
